<resources>
    <string name="app_name">Test6</string>
    <string name="Logo">Logo</string>
    <string name="idText">아이디(EX. *@knu.ac.kr)</string>
    <string name="passwordText">비밀번호(영문+숫자+특수문자, 8~15자)</string>
    <string name="passwordTextcheck">비밀번호 확인</string>
    <string name="Login">로그인</string>
    <string name="register">회 원 가 입</string>
    <string name="studentText">학번(EX.20XXXXXXXX)</string>
    <string name="phoneText">휴대폰번호(EX.01000000000)</string>
    <string name="genderMan">남성</string>
    <string name="genderWoman">여성</string>
    <string name="joinbutton">가입하기</string>
    <string name="nameText">이름</string>
    <string name="Check">중복 체크</string>
    <string name="help">도움 요청</string>
    <string name="community">장애 학생 커뮤니티</string>
    <string name="announce">교내 음성 길 안내</string>
    <string name="main_todo1">TODO</string>
    <string name="logout">로그아웃</string>
    <string name="Autologin">자동로그인</string>
    <string name="searchid">아이디찾기</string>
    <string name="searchpass">비밀번호찾기</string>
    <string name="get_website">Get Website</string>
    <string name="result">Result...</string>
    <string name="DataReceive">데이터 가져오기</string>
    <string name="main_icon">main_icon</string>
    <string name="LoginID">아이디</string>
    <string name="LoginPW">비밀번호</string>
    <string name="Id">아이디</string>
    <string name="todo">TODO</string>
    <string name="Receive">전송</string>
    <string name="name">이름</string>
    <string name="text">text</string>
    <string name="Name">이름</string>
    <string name="Message">메세지</string>
    <string name="Timedata">2011.11.11 11:11</string>
    <string name="Usertodo">TODO</string>
    <string name="Count1">1</string>
    <string name="Count2">1</string>
    <string name="Roomname">방 이름</string>
    <string name="todo3">TODO3</string>
    <string name="realchat">실시간 채팅</string>
    <string name="todo4">TODO4</string>
    <string name="realstreeat">실시간 위치 정보</string>
    <string name="FirstMessage">인식할 문자를 찍어주세요.</string>
    <string name="LoadingMessage">잠시만 기다려주세요.결과가 여기에 나타납니다.</string>
    <string name="CompleteMessage">문자인식이 완료되었습니다.</string>
    <string name="x">X</string>
    <string name="Writings">글 쓰기</string>
    <string name="Clear">완료</string>
</resources>
