<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#6d91d2"
        android:fontFamily="@font/nanumgothicbold"
        android:gravity="center"
        android:onClick="Ocrbutton"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/idText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/idText"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/nanumgothicbold"/>

            <Button
                android:id="@+id/validateButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="#6d91d2"
                android:text="@string/Check"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:fontFamily="@font/nanumgothicbold"/>
        </LinearLayout>

        <EditText
            android:id="@+id/passText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/nanumgothicbold"
            android:hint="@string/passwordText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passTextcheck"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/passwordTextcheck"
            android:inputType="textPassword"
            android:fontFamily="@font/nanumgothicbold"/>
        <EditText
            android:id="@+id/nameText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nameText"
            android:maxLength="5"
            android:inputType="textPersonName"
            android:fontFamily="@font/nanumgothicbold"/>
        <EditText
            android:id="@+id/studentText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/studentText"
            android:maxLength="10"
            android:inputType="numberDecimal"
            android:fontFamily="@font/nanumgothicbold"/>
        <EditText
            android:id="@+id/phonText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phoneText"
            android:inputType="phone"
            android:fontFamily="@font/nanumgothicbold"/>
        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <RadioButton
                android:id="@+id/genderWoman"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/genderWoman"
                android:fontFamily="@font/nanumgothicbold"/>
            <RadioButton
                android:id="@+id/genderMan"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genderMan"
                android:fontFamily="@font/nanumgothicbold"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/disablegroup"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <RadioButton
                android:id="@+id/disable"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="장애인"
                android:fontFamily="@font/nanumgothicbold"/>
            <RadioButton
                android:id="@+id/able"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="비장애인"
                android:fontFamily="@font/nanumgothicbold"/>
        </RadioGroup>

        <Button
            android:id="@+id/join"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/joinbutton"
            android:background="@drawable/round_button"
            android:fontFamily="@font/nanumgothicbold"
            android:textColor="#FFFFFF"
            android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>


